# list-transformer

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  default.nix  list-transformer.cabal  release.nix  shell.nix  stack.yaml
src/List/: Transformer.hs
test/: DocTest.hs
