name:                list-transformer
version:             1.0.6
synopsis:            List monad transformer
description:         This library provides a list monad transformer that
                     enriches lists with effects and streams efficiently in
                     constant space.
                     .
                     This library also has an extensive tutorial in the
                     "List.Transformer" module which explains the motivation
                     behind this type and how to use the type fluently.
homepage:            https://github.com/Gabriel439/Haskell-List-Transformer-Library
license:             BSD3
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
copyright:           2016 Gabriel Gonzalez
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     List.Transformer
  default-language:    Haskell2010
  build-depends:       base >= 4.5 && < 5
                     , mtl >= 2.1 && < 2.3
  if !impl(ghc >= 8.0)
    build-depends:     semigroups == 0.18.*
  if !impl(ghc >= 8.0)
    ghc-options:         -Wall
  if  impl(ghc >= 8.0)
    ghc-options:         -Wall -Wcompat

test-suite doctest
  type: exitcode-stdio-1.0
  main-is: DocTest.hs
  hs-source-dirs: test
  build-depends:
      base
    , doctest
    , list-transformer
  default-language: Haskell2010
